# cpp_ideas

./: .gitignore  CMakeLists.txt  README.md
curses_console/: curses_console.cpp  curses_console.h
maybe_owning/: pointer_holder.cpp
simple_concurrent_console_game/: simple_game.cpp  simple_game_curses.cpp
